--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,8 @@
 :root {
   --white: #fff;
   --bgGray: #29292960;
+  --semiBlack: #00000080;
+  --overlayBlack: #00000093;
+  --primaryColor: #070623;
+  --secondaryColor: #f9564f;
 }
