--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,12 +1,17 @@
-@import 'variables';
+@import 'variables', 'mixins';
 
 body {
-  background-color: #0a1229;
+  background-color: var(--primaryColor);
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%23ffffff' fill-opacity='0.09'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   color: var(--white);
   font-family: 'Varela Round', sans-serif;
   position: relative;
   min-height: 100vh;
+}
+
+a {
+  text-decoration: none;
+  color: var(--secondaryColor);
 }
 
 .books {
@@ -15,32 +20,49 @@ body {
   align-items: flex-start;
 }
 
-.popupForm {
-  position: absolute;
+.form {
   visibility: hidden;
+  @include flexCenter(center);
+  position: absolute;
   top: 0;
   left: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   height: 100%;
   width: 100%;
-  flex-direction: column;
+  z-index: 11;
 
-  &::before {
+  &::after {
     content: '';
     position: absolute;
     width: 100vw;
     height: 100vh;
-    background-color: #29292960;
-    z-index: -1;
+    background-color: var(--overlayBlack);
+    z-index: 10;
     top: 0;
     left: 0;
   }
+
+  &__wrapper {
+    transform: scale(0);
+    z-index: 11;
+  }
 }
 
-.libIcon {
-  width: 4rem;
+.header {
+  color: var(--secondaryColor);
+  display: flex;
+  align-items: center;
+  width: 100vw;
+  background: var(--semiBlack);
+  border-bottom: 1px solid var(--bgGray);
+
+  &__icon {
+    color: var(--white);
+    width: 4.5rem;
+    margin: 1rem;
+  }
+  &__title {
+    font-size: 2.5rem;
+  }
 }
 
 .addBook {
@@ -53,8 +75,42 @@ body {
   height: 4rem;
   font-size: 2rem;
   transition: transform 0.2s ease-in;
+  background: var(--secondaryColor);
+  color: var(--white);
+  border: 1px solid var(--secondaryColor);
+
+  &:hover {
+    transform: scale(1.1);
+  }
 }
 
-.addBook:hover {
-  transform: scale(1.1);
+.list {
+  width: 90%;
+  margin: 0 auto;
+  height: 80%;
+
+  &__title {
+    text-align: center;
+    font-size: 2rem;
+    color: var(--secondaryColor);
+  }
+
+  &__container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    gap: 1rem;
+    & div {
+      padding: 0.5rem;
+      border: 1px solid var(--secondaryColor);
+      border-top-left-radius: 10px;
+      border-bottom-right-radius: 10px;
+      background: var(--secondaryColor);
+      @include flexCenter(column);
+    }
+  }
+}
+
+.show {
+  transition: transform 0.2s ease-in-out;
+  transform: scale(1);
 }
