--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
   --overlayBlack: #00000093;
   --primaryColor: #070623;
   --secondaryColor: #f9564f;
+  --secondaryColorShadow: #992d2a;
 }
 
 body {
@@ -25,13 +26,20 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  gap: 0.5rem;
 }
 
 .form {
@@ -69,9 +77,31 @@ a {
 }
 
 .form__wrapper {
-  -webkit-transform: scale(0);
-          transform: scale(0);
+  background: var(--secondaryColor);
+  border: 1px solid var(--secondaryColor);
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  -webkit-box-shadow: 0.1rem 0 var(--white), 0.15rem 0 var(--secondaryColorShadow), 0.2rem 0 var(--white), 0.25rem 0 var(--secondaryColorShadow), 0.3rem 0 var(--white), 0.35rem 0 var(--secondaryColorShadow), 0.4rem 0 var(--white), 0.45rem 0 var(--secondaryColorShadow), 0.5rem 0 var(--white), 0.55rem 0 var(--secondaryColorShadow), 0.6rem 0 var(--white), -0.4rem 0 var(--secondaryColorShadow);
+          box-shadow: 0.1rem 0 var(--white), 0.15rem 0 var(--secondaryColorShadow), 0.2rem 0 var(--white), 0.25rem 0 var(--secondaryColorShadow), 0.3rem 0 var(--white), 0.35rem 0 var(--secondaryColorShadow), 0.4rem 0 var(--white), 0.45rem 0 var(--secondaryColorShadow), 0.5rem 0 var(--white), 0.55rem 0 var(--secondaryColorShadow), 0.6rem 0 var(--white), -0.4rem 0 var(--secondaryColorShadow);
+  padding: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   z-index: 11;
+}
+
+.form__title {
+  font-size: 2rem;
 }
 
 .header {
@@ -135,15 +165,15 @@ a {
 .list__container {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(400px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  -ms-grid-columns: (minmax(300px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 1rem;
 }
 
 .list__container div {
   padding: 0.5rem;
   border: 1px solid var(--secondaryColor);
-  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   background: var(--secondaryColor);
   display: -webkit-box;
@@ -159,14 +189,42 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-shadow: 0 0.3rem var(--secondaryColorShadow);
+          box-shadow: 0 0.3rem var(--secondaryColorShadow);
 }
 
-.show {
-  -webkit-transition: -webkit-transform 0.2s ease-in-out;
-  transition: -webkit-transform 0.2s ease-in-out;
-  transition: transform 0.2s ease-in-out;
-  transition: transform 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out;
-  -webkit-transform: scale(1);
-          transform: scale(1);
+.form--active {
+  -webkit-animation: fadeIn 0.3s ease-in;
+          animation: fadeIn 0.3s ease-in;
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  70% {
+    -webkit-transform: scale(1.12);
+            transform: scale(1.12);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  70% {
+    -webkit-transform: scale(1.12);
+            transform: scale(1.12);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
 }
 /*# sourceMappingURL=style.css.map */
