--- a/css/style.css
+++ b/css/style.css
@@ -57,23 +57,23 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: center;
           flex-direction: center;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   z-index: 11;
 }
 
 .form::after {
   content: '';
   position: absolute;
-  width: 100vw;
-  height: 100vh;
-  background-color: var(--overlayBlack);
-  z-index: 10;
   top: 0;
   left: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: 10;
+  background-color: var(--overlayBlack);
 }
 
 .form__wrapper {
@@ -128,7 +128,7 @@ a {
 }
 
 .addBook {
-  position: absolute;
+  position: fixed;
   margin: 2rem;
   bottom: 0;
   right: 0;
@@ -170,7 +170,7 @@ a {
   gap: 1rem;
 }
 
-.list__container div {
+.list__container .item {
   padding: 0.5rem;
   border: 1px solid var(--secondaryColor);
   border-bottom-left-radius: 10px;
