--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -4,3 +4,11 @@
   align-items: center;
   flex-direction: $direction;
 }
+
+@mixin fullScreenPosition($position) {
+  position: $position;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+}
