--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,22 +23,14 @@ a {
 .form {
   visibility: hidden;
   @include flexCenter(center);
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
+  @include fullScreenPosition(fixed);
   z-index: 11;
 
   &::after {
     content: '';
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    background-color: var(--overlayBlack);
+    @include fullScreenPosition(absolute);
     z-index: 10;
-    top: 0;
-    left: 0;
+    background-color: var(--overlayBlack);
   }
 
   &__wrapper {
@@ -81,7 +73,7 @@ a {
 }
 
 .addBook {
-  position: absolute;
+  position: fixed;
   margin: 2rem;
   bottom: 0;
   right: 0;
@@ -114,7 +106,7 @@ a {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 1rem;
-    & div {
+    & .item {
       padding: 0.5rem;
       border: 1px solid var(--secondaryColor);
       border-bottom-left-radius: 10px;
