--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,9 +1,15 @@
 :root {
   --white: #fff;
+  --gray: #000000b5;
   --bgGray: #29292960;
   --semiBlack: #00000080;
   --overlayBlack: #00000093;
-  --primaryColor: #070623;
+  --primaryColor: #023047;
   --secondaryColor: #f9564f;
   --secondaryColorShadow: #992d2a;
+
+  --checked: #35bb52;
+  --unchecked: #df0303;
+
+  --direction: to left;
 }
