--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,7 @@
 @import 'variables', 'mixins';
 
+/* Global Changes */
+
 body {
   background-color: var(--primaryColor);
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%23ffffff' fill-opacity='0.09'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
@@ -7,6 +9,9 @@ body {
   font-family: 'Varela Round', sans-serif;
   position: relative;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
 }
 
 a {
@@ -14,24 +19,34 @@ a {
   color: var(--secondaryColor);
 }
 
-.books {
-  @include flexCenter(column);
-  align-items: stretch;
-  gap: 0.5rem;
+/* Header section */
+
+.header {
+  color: var(--secondaryColor);
+  display: flex;
+  align-items: center;
+  width: 100vw;
+  background: var(--semiBlack);
+  border-bottom: 1px solid var(--bgGray);
+
+  &__icon {
+    color: var(--white);
+    width: 4.5rem;
+    margin: 1rem;
+  }
+  &__title {
+    font-size: 2.5rem;
+  }
 }
 
+/* Popup section */
+
 .form {
-  visibility: hidden;
+  transition: transform 300ms ease-out;
   @include flexCenter(center);
+  transform: scale(0);
   @include fullScreenPosition(fixed);
   z-index: 11;
-
-  &::after {
-    content: '';
-    @include fullScreenPosition(absolute);
-    z-index: 10;
-    background-color: var(--overlayBlack);
-  }
 
   &__wrapper {
     background: var(--secondaryColor);
@@ -54,51 +69,68 @@ a {
   }
 }
 
-.header {
-  color: var(--secondaryColor);
-  display: flex;
-  align-items: center;
-  width: 100vw;
-  background: var(--semiBlack);
-  border-bottom: 1px solid var(--bgGray);
+.overlay {
+  content: '';
+  display: none;
+  @include fullScreenPosition(fixed);
+  z-index: 10;
+  background-color: var(--overlayBlack);
+}
 
-  &__icon {
-    color: var(--white);
-    width: 4.5rem;
-    margin: 1rem;
-  }
-  &__title {
-    font-size: 2.5rem;
+.form--active {
+  transform: scale(1);
+}
+
+.overlay--active {
+  display: block;
+}
+
+.form__books {
+  @include flexCenter(column);
+  align-items: stretch;
+  gap: 0.5rem;
+  &__wrapper-readed {
+    display: flex;
+    gap: 0.5rem;
   }
 }
 
+/* Add new book button */
 .addBook {
   position: fixed;
-  margin: 2rem;
-  bottom: 0;
-  right: 0;
-  border-radius: 50%;
   width: 4rem;
   height: 4rem;
-  font-size: 2rem;
-  transition: transform 0.2s ease-in;
+  bottom: 0;
+  right: 0;
   background: var(--secondaryColor);
   color: var(--white);
-  border: 1px solid var(--secondaryColor);
+  border: 2px solid var(--white);
+  border-radius: 50%;
+  font-size: 2rem;
+  padding: 0;
+  margin: 2rem;
+  transition: transform 0.2s ease-out;
 
   &:hover {
     transform: scale(1.1);
   }
 }
 
+/* JS generated list styles */
+
+.main {
+  flex: 1;
+  margin-bottom: 1rem;
+}
+
 .list {
-  width: 90%;
-  margin: 0 auto;
-  height: 80%;
+  width: 100vw;
+  flex: 1;
 
   &__title {
     text-align: center;
     font-size: 2rem;
+    margin: 2rem;
     color: var(--secondaryColor);
   }
 
@@ -106,30 +138,83 @@ a {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 1rem;
+    margin: 0 2rem;
+
     & .item {
+      transition: transform 300ms ease-out;
+      transform: scale(1);
       padding: 0.5rem;
       border: 1px solid var(--secondaryColor);
       border-bottom-left-radius: 10px;
       border-bottom-right-radius: 10px;
       background: var(--secondaryColor);
       @include flexCenter(column);
+      gap: 0.5rem;
       box-shadow: 0 0.3rem var(--secondaryColorShadow);
+    }
+  }
+
+  &__item {
+    @include flexCenter(column);
+    gap: 0.25rem;
+
+    & > span {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 0.5rem;
+      color: #000000b5;
+    }
+    & > p {
+      font-size: 1.75rem;
+      margin: 0;
+      padding: 0;
     }
   }
 }
 
-.form--active {
-  animation: fadeIn 0.3s ease-in;
+.btn {
+  background: var(--primaryColor);
+  color: var(--white);
+  border: 2px solid var(--white);
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  margin: 0.3125rem;
+  transition: border 300ms ease-out, color 300ms ease-out,
+    background 300ms ease-out;
+
+  &:hover {
+    border: 2px solid var(--primaryColor);
+    background: var(--white);
+    color: var(--primaryColor);
+  }
+
+  &--checked {
+    border: 2px solid var(--checked);
+    &:hover {
+      color: var(--unchecked);
+    }
+  }
+
+  &--unchecked {
+    border: 2px solid var(--unchecked);
+    &:hover {
+      color: var(--checked);
+    }
+  }
 }
 
-@keyframes fadeIn {
-  0% {
-    transform: scale(0);
+/* Footer */
+
+.footer {
+  background: var(--secondaryColor);
+
+  &__link {
+    color: var(--primaryColor);
   }
-  70% {
-    transform: scale(1.12);
-  }
-  100% {
-    transform: scale(1);
+
+  &__person {
+    margin: 1rem;
+    text-align: center;
   }
 }
