--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ a {
   width: 6.25rem;
   background: var(--primaryColor);
   color: var(--white);
-  border: 2px solid var(--white);
+  border: 0.125rem solid var(--white);
   padding: 0.5rem 1rem;
   border-radius: 5px;
   margin: 0.3125rem;
@@ -257,25 +257,11 @@ a {
 .c-item {
   -webkit-transform: scale(1);
           transform: scale(1);
-  padding: 0.5rem;
+  padding: 0.5rem 0;
   border: 1px solid var(--secondaryColor);
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   background: var(--secondaryColor);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 0.5rem;
   -webkit-box-shadow: 0 0.3rem var(--secondaryColorShadow);
           box-shadow: 0 0.3rem var(--secondaryColorShadow);
 }
