--- a/scss/style.scss
+++ b/scss/style.scss
@@ -137,7 +137,7 @@ a {
   border-radius: 50%;
   font-size: 2rem;
   padding: 0;
-  margin: 2rem;
+  margin: 4.5rem 1.5rem;
   transition: transform 0.2s ease-out;
 
   &:hover {
