--- a/css/style.css
+++ b/css/style.css
@@ -290,19 +290,26 @@ a {
 }
 
 .c-list__title {
-  gap: 0.5rem;
   color: var(--black);
 }
 
 .c-list__result {
   font-size: 1.75rem;
-  margin: 0;
+  margin: 0.125rem 0;
   padding: 0;
+}
+
+.c-list__desc {
+  font-size: 1rem;
+  padding: 0.5rem;
+  margin: 0.5rem 1rem;
+  border-radius: 5px;
+  border-top: 1px solid;
+  border-bottom: 1px solid;
 }
 
 .c-list__item {
   text-align: center;
-  margin: 0.2rem;
 }
 
 .c-list__btn--checked {
